--- a/android-project/UniGame/app/src/main/res/drawable/etxt_background.xml
+++ b/android-project/UniGame/app/src/main/res/drawable/etxt_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:left="0dp" android:top="0dp">
         <shape android:shape="rectangle"  >
-            <corners android:radius="100dip" />
+            <corners android:radius="@dimen/radius1" />
             <stroke android:color="@color/Black" android:width="2dp"/>
             <solid android:color="@color/LightBlue"/>
         </shape>
