--- a/android-project/UniGame/app/src/main/res/layout/list_item_asignaturas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/list_item_asignaturas.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/lv_default_dessign"
+    android:paddingBottom="@dimen/margin_topbot_list_item"
+    android:paddingTop="@dimen/margin_topbot_list_item"
     >
 
     <TextView
         android:id="@+id/txt_listitem_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
+        android:textSize="@dimen/text_size_lista"
         android:padding="5dip"
-        android:textStyle="bold"
         android:textColor="@color/Black"
-        android:gravity="center_horizontal"
+        android:gravity="center_vertical"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
         />
@@ -22,6 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_height="wrap_content"
         android:layout_marginRight="20dp"
+        android:gravity="center_vertical"
         android:onClick="onCheckBoxClicked"
         android:checked="false" />
 
