--- a/android-project/UniGame/app/src/main/res/layout/activity_main.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,19 @@
                 style="@style/ll_main_container">
 
                 <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dip"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dip"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/button_design"
+                    android:clickable="true"
+                    android:text="@string/btn_login"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay" />
+
+                <Button
                     android:id="@+id/individual_mode"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
