--- a/android-project/UniGame/app/src/main/res/layout/activity_usar_bd.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_usar_bd.xml
@@ -4,35 +4,44 @@
     style="@style/ll_main_horizontal"
     tools:context=".app.presentacion.controlador.impl.UsarDB">
 
-    <RelativeLayout
-        style="@style/rl_main_left">
-    </RelativeLayout>
-    <RelativeLayout
-        style="@style/rl_main_central">
-        <LinearLayout
-            style="@style/ll_main_central_vertical">
-            <RelativeLayout
-                style="@style/rl_main_top">
-            </RelativeLayout>
+    <RelativeLayout style="@style/rl_main_left"></RelativeLayout>
+
+    <RelativeLayout style="@style/rl_main_central">
+
+        <LinearLayout style="@style/ll_main_central_vertical">
+
+            <RelativeLayout style="@style/rl_main_top"></RelativeLayout>
+
             <ImageView
                 android:id="@+id/imageView"
-                style="@style/img_main_logo"/>
+                style="@style/img_main_logo" />
+
+            <Button
+                android:id="@+id/btn_crear_db"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/lv_default_dessign"
+                android:gravity="center_horizontal"
+                android:padding="5dip"
+                android:paddingBottom="@dimen/margin_topbot_list_item"
+                android:paddingTop="@dimen/margin_topbot_list_item"
+                android:text="@string/btn_create"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/text_size_lista" />
+
             <LinearLayout
-                android:orientation="vertical"
-                style="@style/ll_main_container">
+                style="@style/ll_main_container"
+                android:orientation="vertical">
 
                 <ListView
                     android:id="@+id/lv_usar_db_preguntas"
-                    style="@style/lv_default">
-                </ListView>
+                    style="@style/lv_default"></ListView>
 
             </LinearLayout>
-            <RelativeLayout
-                style="@style/rl_main_bottom">
-            </RelativeLayout>
+
+            <RelativeLayout style="@style/rl_main_bottom"></RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
-    <RelativeLayout
-        style="@style/rl_main_right">
-    </RelativeLayout>
+
+    <RelativeLayout style="@style/rl_main_right"></RelativeLayout>
 </LinearLayout>
