--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
@@ -27,6 +27,18 @@
             <LinearLayout
                 android:orientation="vertical"
                 style="@style/ll_main_container">
+                <Button
+                    android:id="@+id/btn_crear_db"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/lv_default_dessign"
+                    android:gravity="center_horizontal"
+                    android:padding="5dip"
+                    android:paddingBottom="@dimen/margin_topbot_list_item"
+                    android:paddingTop="@dimen/margin_topbot_list_item"
+                    android:text="@string/btn_create"
+                    android:textColor="@color/Black"
+                    android:textSize="@dimen/text_size_lista" />
                 <ListView
                     style="@style/lv_default"
                     android:id="@+id/lv_bases_datos">
