--- a/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
@@ -20,14 +20,14 @@
             <LinearLayout
                 android:orientation="vertical"
                 style="@style/ll_main_container">
-                <EditText
-                    android:id="@+id/etxt_university"
+                <Button
+                    android:id="@+id/btn_university"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:background="@drawable/etxt_background"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:hint="@string/etxt_university"
+                    android:text="@string/etxt_university"
                     android:ellipsize="end"
                     android:paddingLeft="15sp"
                     android:paddingRight="15sp"
@@ -35,15 +35,16 @@
                     android:maxLines="1"
                     android:scrollHorizontally="true"
                     android:layout_margin="5dip"
-                    android:layout_weight="0.16"/>
-                <EditText
-                    android:id="@+id/etxt_carrer"
+                    android:layout_weight="0.16"
+                    />
+                <Button
+                    android:id="@+id/btn_carrer"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:background="@drawable/etxt_background"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:hint="@string/etxt_carrer"
+                    android:text="@string/etxt_carrer"
                     android:ellipsize="end"
                     android:paddingLeft="15sp"
                     android:paddingRight="15sp"
@@ -51,7 +52,8 @@
                     android:maxLines="1"
                     android:scrollHorizontally="true"
                     android:layout_margin="5dip"
-                    android:layout_weight="0.16"/>
+                    android:layout_weight="0.16"
+                    />
                 <EditText
                     android:id="@+id/etxt_subject"
                     android:layout_width="match_parent"
@@ -67,7 +69,8 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_margin="5dip"
-                    android:layout_weight="0.16"/>
+                    android:layout_weight="0.16"
+                    />
                 <EditText
                     android:id="@+id/etxt_name_db"
                     android:layout_width="match_parent"
