--- a/android-project/UniGame/app/src/main/res/layout/activity_gestionar_bd.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_gestionar_bd.xml
@@ -25,7 +25,7 @@
                 android:padding="5dip"
                 android:paddingBottom="@dimen/margin_topbot_list_item"
                 android:paddingTop="@dimen/margin_topbot_list_item"
-                android:text="@string/btn_create"
+                android:text="Crear Bolsa Preguntas"
                 android:textColor="@color/Black"
                 android:textSize="@dimen/text_size_lista" />
 
