--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_bases_datos.xml
@@ -28,15 +28,16 @@
                 android:orientation="vertical"
                 style="@style/ll_main_container">
                 <Button
-                    android:id="@+id/btn_crear_db"
+                    android:id="@+id/btn_confirmar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/lv_default_dessign"
-                    android:gravity="center_horizontal"
-                    android:padding="5dip"
-                    android:paddingBottom="@dimen/margin_topbot_list_item"
-                    android:paddingTop="@dimen/margin_topbot_list_item"
-                    android:text="@string/btn_create"
+                    android:gravity="center"
+                    android:paddingRight="5dip"
+                    android:paddingLeft="5dip"
+                    android:paddingBottom="9dip"
+                    android:paddingTop="9dip"
+                    android:text="@string/btn_confirmar"
                     android:textColor="@color/Black"
                     android:textSize="@dimen/text_size_lista" />
                 <ListView
