--- a/android-project/UniGame/app/src/main/res/layout/list_item_db.xml
+++ b/android-project/UniGame/app/src/main/res/layout/list_item_db.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/etxt_background">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/txt_listitem_db"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/txt_listitem_default"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="nombre_db"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal"/>
+        android:textSize="@dimen/text_size_lista"
+        android:padding="5dip"
+        android:textColor="@color/Black"
+        android:gravity="center_vertical"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"/>
 
-</LinearLayout>
+</RelativeLayout>
