--- a/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
@@ -20,8 +20,8 @@
             <LinearLayout
                 android:orientation="vertical"
                 style="@style/ll_main_container">
-                <Button
-                    android:id="@+id/btn_university"
+                <TextView
+                    android:id="@+id/txt_university"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:background="@drawable/etxt_background"
@@ -37,8 +37,8 @@
                     android:layout_margin="5dip"
                     android:layout_weight="0.16"
                     />
-                <Button
-                    android:id="@+id/btn_carrer"
+                <TextView
+                    android:id="@+id/txt_carrer"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:background="@drawable/etxt_background"
@@ -54,8 +54,8 @@
                     android:layout_margin="5dip"
                     android:layout_weight="0.16"
                     />
-                <EditText
-                    android:id="@+id/etxt_subject"
+                <TextView
+                    android:id="@+id/txt_subject"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:hint="@string/etxt_subject"
