--- a/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
@@ -77,8 +77,8 @@
                     android:layout_weight="0.1"
                     android:background="@drawable/button_design"
                     android:clickable="true"
-                    android:text="@string/btn_create"
-                    android:onClick="Crear_Click"
+                    android:text="Modificar"
+                    android:onClick="Modificar_Click"
                     android:textColor="@color/black_overlay" />
             </LinearLayout>
 
