--- a/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_lista_preguntas.xml
@@ -21,18 +21,20 @@
                 android:orientation="vertical"
                 style="@style/ll_main_container">
 
-                <Button
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/txt_title0"
+                    android:textColor="@color/Black"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Confirmar"
-                    android:onClick="Confirmar_Cambios"
-                    android:id="@+id/confirmarbutton" />
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="10sp"/>
 
                 <Button
                     android:id="@+id/btn_crear_pregunta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/lv_default_dessign"
+                    android:background="@drawable/button_design"
                     android:gravity="center_horizontal"
                     android:padding="5dip"
                     android:paddingBottom="@dimen/margin_topbot_list_item"
