--- a/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
@@ -73,12 +73,14 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/etxt_edit_question"
                     android:ellipsize="end"
+                    android:textColor="#000"
                     android:padding="15sp" />
 
                 <LinearLayout
                     style="@style/ll_show_answer">
                     <TextView
                         android:id="@+id/txt_answer_a"
+                        android:textColor="#000"
                         style="@style/etxt_show_answer"/>
                     <Button
                         android:id="@+id/btn_edit_answer_a"
@@ -88,6 +90,7 @@
                     style="@style/ll_show_answer">
                     <TextView
                         android:id="@+id/txt_answer_b"
+                        android:textColor="#000"
                         style="@style/etxt_show_answer"/>
                     <Button
                         android:id="@+id/btn_edit_answer_b"
@@ -97,6 +100,7 @@
                     style="@style/ll_show_answer">
                     <TextView
                         android:id="@+id/txt_answer_c"
+                        android:textColor="#000"
                         style="@style/etxt_show_answer"/>
                     <Button
                         android:id="@+id/btn_edit_answer_c"
@@ -106,6 +110,7 @@
                     style="@style/ll_show_answer">
                     <TextView
                         android:id="@+id/txt_answer_d"
+                        android:textColor="#000"
                         style="@style/etxt_show_answer"/>
                     <Button
                         android:id="@+id/btn_edit_answer_d"
