--- a/android-project/UniGame/app/src/main/res/values/styles.xml
+++ b/android-project/UniGame/app/src/main/res/values/styles.xml
@@ -165,6 +165,45 @@
         <item name="android:scrollbars">none</item>
     </style>
 
+
+    <style name="txt_nombreEstadistica">
+        <item name = "android:layout_weight">0.5</item>
+        <item name = "android:textSize">22sp</item>
+        <item name = "android:textColor">#000</item>
+
+    </style>
+
+    <style name="txt_valorEstadistica">
+        <item name = "android:layout_weight">0.5</item>
+        <item name = "android:textSize">22sp</item>
+        <item name = "android:textColor">#222</item>
+
+    </style>
+
+
+    <style name="txt_nombreEstadisticaNota">
+        <item name = "android:layout_weight">0.5</item>
+        <item name = "android:textColor">#222</item>
+        <item name = "android:layout_width">match_parent</item>
+        <item name = "android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+    <style name="txt_valorEstadisticaNota">
+        <item name = "android:layout_weight">0.3</item>
+        <item name = "android:layout_width">match_parent</item>
+        <item name = "android:layout_height">match_parent</item>
+        <item name = "android:textColor">#222</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
+
+
     <!-- Configuración de los botones para seleccionar la respuesta correcta cuando se está jugando -->
     <style name="btn_show_correct_answer_playing">
         <item name="android:layout_width">0dip</item>
