--- a/android-project/UniGame/app/src/main/res/layout/dialog_registry.xml
+++ b/android-project/UniGame/app/src/main/res/layout/dialog_registry.xml
@@ -2,12 +2,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/ll_login">
+    android:id="@+id/ll_registry">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:scaleType="center"
-        android:text="@string/title_activity_login"
+        android:text="@string/title_activity_registry"
         android:gravity="center"
         android:textSize="45sp"
         android:background="#FFFFBB33"/>
@@ -33,6 +33,37 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
         android:hint="@string/hint_id_password"/>
+    <EditText
+        android:theme="@style/Widget.AppCompat.EditText"
+        android:id="@+id/nombre"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:hint="@string/hint_id_nombre"/>
+    <EditText
+        android:theme="@style/Widget.AppCompat.EditText"
+        android:id="@+id/apellidos"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="sans-serif"
+        android:hint="@string/hint_id_apellidos"
+        />
+
+<Spinner
+    android:theme="@style/Widget.AppCompat.Spinner"
+    android:id="@+id/sexo"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"></Spinner>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -40,44 +71,18 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">
         <Button
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_registry"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:clickable="true"
-            android:text="@string/btn_login"
-            android:textSize="20dp"/>
+            android:text="@string/btn_registry"/>
         <Button
             android:id="@+id/btn_cancel"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:clickable="true"
-            android:text="@string/btn_cancelar"
-            android:textSize="20dp"/>
-    </LinearLayout>
-
-        <TextView
-            android:layout_marginTop="30dp"
-            android:theme="@style/Widget.AppCompat.TextView.SpinnerItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/txtRegistro"
-            android:layout_gravity="center"
-            android:textSize="20dp"/>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/btn_registrar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:clickable="true"
-            android:text="@string/btn_registry"
-            android:layout_gravity="center"
-            android:textSize="20dp"
-            />
+            android:text="@string/btn_cancelar"/>
     </LinearLayout>
 </LinearLayout>
