Cambiado crear DB

--- a/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_crear_db.xml
@@ -28,6 +28,8 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/etxt_university"
+                    android:textSize="15dp"
+                    android:textColor="@color/DarkSlateGray"
                     android:ellipsize="end"
                     android:paddingLeft="15sp"
                     android:paddingRight="15sp"
@@ -45,6 +47,8 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/etxt_carrer"
+                    android:textSize="15dp"
+                    android:textColor="@color/DarkSlateGray"
                     android:ellipsize="end"
                     android:paddingLeft="15sp"
                     android:paddingRight="15sp"
@@ -58,7 +62,9 @@
                     android:id="@+id/txt_subject"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
-                    android:hint="@string/etxt_subject"
+                    android:text="@string/etxt_subject"
+                    android:textSize="15dp"
+                    android:textColor="@color/DarkSlateGray"
                     android:ellipsize="end"
                     android:paddingLeft="15sp"
                     android:paddingRight="15sp"
