--- a/android-project/UniGame/app/src/main/res/layout/activity_main.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,20 @@
                 android:orientation="vertical"
                 style="@style/ll_main_container">
 
-                <Button
-                    android:id="@+id/btn_login"
+                <TextView
+                    android:id="@+id/tv_login"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:layout_gravity="center"
                     android:layout_margin="5dip"
                     android:layout_weight="0.2"
-                    android:background="@drawable/button_design"
+                    android:background="@drawable/lv_default_dessign"
                     android:clickable="true"
-                    android:text="@string/btn_login"
+                    android:gravity="center"
+                    android:text=""
                     android:textStyle="bold"
                     android:textColor="@color/black_overlay"
-                    android:textSize="20dp"/>
+                    android:textSize="15dp"/>
 
                 <Button
                     android:id="@+id/individual_mode"
