--- a/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_editar_pregunta.xml
@@ -79,6 +79,18 @@
                     android:text="Modificar"
                     android:onClick="Modificar_Click"
                     android:textColor="@color/black_overlay" />
+                <Button
+                    android:id="@+id/use_cancel"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dip"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="0.1"
+                    android:background="@drawable/button_design"
+                    android:clickable="true"
+                    android:text="Cancelar Modificación"
+                    android:onClick="Cancelar_Click"
+                    android:textColor="@color/black_overlay" />
             </LinearLayout>
 
             <RelativeLayout style="@style/rl_main_bottom"></RelativeLayout>
