--- a/android-project/UniGame/app/src/main/res/values/styles.xml
+++ b/android-project/UniGame/app/src/main/res/values/styles.xml
@@ -137,6 +137,16 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- Estilo TextView secundario del título -->
+    <style name="txt_titlePreguntas">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dip</item>
+        <item name="android:layout_weight">0.20</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
     <!-- Estilo LinearLayout secundario del título -->
     <style name="ll_secundary_title">
