puedes salir de la app desde el menú

--- a/android-project/UniGame/app/src/main/res/values/styles.xml
+++ b/android-project/UniGame/app/src/main/res/values/styles.xml
@@ -74,6 +74,7 @@
         <item name="android:scrollHorizontally">true</item>
         <item name="android:singleLine">true</item>
         <item name="android:maxLines">1</item>
+        <item name="android:textSize">17dp</item>
     </style>
 
     <!-- Estilos de de Representación de los TextBox respuestas -->
@@ -85,6 +86,7 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:ellipsize">none</item>
         <item name="android:paddingLeft">15sp</item>
+        <item name="android:textSize">17dp</item>
         <item name="android:paddingRight">15sp</item>
         <item name="android:scrollHorizontally">true</item>
         <item name="android:singleLine">true</item>
