--- a/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
@@ -79,7 +79,9 @@
                     android:background="@drawable/etxt_edit_question"
                     android:ellipsize="end"
                     android:textColor="#000"
-                    android:padding="15sp" />
+                    android:padding="15sp"
+                    android:textSize = "17dp"
+                />
 
 
 
@@ -95,6 +97,7 @@
                     <TextView
                         android:id="@+id/txt_answer_a"
                         style="@style/txt_show_answer"
+
                         />
                     </HorizontalScrollView>
 
