--- a/android-project/UniGame/app/src/main/res/layout/activity_gestionar_bd.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_gestionar_bd.xml
@@ -35,6 +35,18 @@
                 android:text="Crear Bolsa Preguntas"
                 android:textColor="@color/Black"
                 android:textSize="@dimen/text_size_lista" />
+            <Button
+                android:id="@+id/delete_questions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_design"
+                android:gravity="center_horizontal"
+                android:padding="5dip"
+                android:paddingBottom="@dimen/margin_topbot_list_item"
+                android:paddingTop="@dimen/margin_topbot_list_item"
+                android:text="Eliminar Bolsas Preguntas"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/text_size_lista" />
             <TextView
                 android:id="@+id/txt_title2"
                 android:textColor="@color/Black"
