--- a/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
@@ -33,6 +33,7 @@
                         android:layout_width="wrap_content"
                         android:layout_marginRight="5dp"
                         android:textStyle="bold"
+                        android:textSize="20dp"
                         android:text="@string/txt_tiempo_nombre"
                         android:textColor="#222"
                     />
@@ -41,6 +42,7 @@
                         android:layout_height="match_parent"
                         android:layout_width="wrap_content"
                         android:textStyle="bold"
+                        android:textSize="20dp"
                         android:textColor="#222"
                     />
                 </LinearLayout>
@@ -49,6 +51,7 @@
                 android:orientation="vertical"
                 style="@style/ll_main_container">
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
@@ -56,15 +59,15 @@
                     android:gravity="center">
                     <ImageButton
                         android:id="@+id/comodin1"
-                        android:layout_width="wrap_content"
+                        style="@style/img_comodin_50"
                         android:layout_height="wrap_content" />
                     <ImageButton
                         android:id="@+id/comodin2"
-                        android:layout_width="wrap_content"
+                        style="@style/img_comodin_pasar"
                         android:layout_height="wrap_content" />
                     <ImageButton
                         android:id="@+id/comodin3"
-                        android:layout_width="wrap_content"
+                        style="@style/img_comodin_cambiar"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
