--- a/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
+++ b/android-project/UniGame/app/src/main/res/layout/activity_juego_individual.xml
@@ -72,8 +72,8 @@
                 </LinearLayout>
 
 
-
                 <TextView
+                    android:scrollbars = "vertical"
                     android:id="@+id/txt_question"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
@@ -91,18 +91,13 @@
                 <LinearLayout
                     style="@style/ll_show_answer">
 
-                    <HorizontalScrollView
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8">
-
 
                     <TextView
                         android:id="@+id/txt_answer_a"
                         style="@style/txt_show_answer"
-
+                        android:scrollbars = "horizontal"
                         />
-                    </HorizontalScrollView>
+
 
                     <Button
                         android:id="@+id/btn_edit_answer_a"
@@ -111,46 +106,38 @@
                 </LinearLayout>
                 <LinearLayout
                     style="@style/ll_show_answer">
-                    <HorizontalScrollView
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8">
 
                     <TextView
                         android:id="@+id/txt_answer_b"
-                        style="@style/txt_show_answer"/>
-                    </HorizontalScrollView>
+                        style="@style/txt_show_answer"
+                        android:scrollbars = "horizontal"
+                        />
+
                     <Button
                         android:id="@+id/btn_edit_answer_b"
                         style="@style/btn_show_correct_answer_playing"/>
                 </LinearLayout>
                 <LinearLayout
                     style="@style/ll_show_answer">
-                    <HorizontalScrollView
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8">
-
 
                     <TextView
                         android:id="@+id/txt_answer_c"
-                        style="@style/txt_show_answer"/>
-                    </HorizontalScrollView>
+                        style="@style/txt_show_answer"
+                        android:scrollbars = "horizontal"/>
+
                     <Button
                         android:id="@+id/btn_edit_answer_c"
                         style="@style/btn_show_correct_answer_playing"/>
                 </LinearLayout>
                 <LinearLayout
                     style="@style/ll_show_answer">
-                    <HorizontalScrollView
-                        android:layout_width="0dip"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.8">
 
                     <TextView
                         android:id="@+id/txt_answer_d"
-                        style="@style/txt_show_answer"/>
-                </HorizontalScrollView>
+                        style="@style/txt_show_answer"
+                        android:scrollbars = "horizontal"
+                        />
+
                     <Button
                         android:id="@+id/btn_edit_answer_d"
                         style="@style/btn_show_correct_answer_playing"/>
