--- a/android-project/UniGame/app/src/main/res/layout/dialog_login.xml
+++ b/android-project/UniGame/app/src/main/res/layout/dialog_login.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:clickable="true"
-            android:text="@string/btn_cancelar"
+            android:text="@string/btn_salir"
             android:textSize="20dp"/>
     </LinearLayout>
 
@@ -76,6 +76,7 @@
             android:layout_height="wrap_content"
             android:text="@string/txtRegistro"
             android:layout_gravity="center"
+            android:layout_margin="5dp"
             android:textSize="20dp"/>
     <LinearLayout
         android:orientation="vertical"
